--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
 <head>
 	<meta charset="UTF-8">
 	<title>jquery spotify API</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-	
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<form id="searchMusic" class="navbar-form pull-right">
+					<input type="text" style="width: 200px;" value="beck" />
+					<button type="submit" class="btn btn-default">Submit</button>
+					<div class="form-group">
+                        <select id="searchSelect"></select>
+                    </div>
+				</form>
+			</div>
+		</div>
+	</div>
+
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" /></script>
+<script src="js/main.js"></script>
 </body>
 </html>
