--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 					<div class="form-group">
                         <select id="searchSelect"></select>
                     </div>
+                    <div class="form-group">
+                        <select id="albumSelect"></select>
+                    </div>
 				</form>
+                <ul id="trackSelect"></ul>
 			</div>
 		</div>
 	</div>
